--- a/ArticlesServer/ArticlesServer.csproj
+++ b/ArticlesServer/ArticlesServer.csproj
@@ -13,4 +13,9 @@
     <ProjectReference Include="..\ArticlesServerBL\ArticlesServerBL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTO\" />
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
