--- a/ArticlesServer/appsettings.json
+++ b/ArticlesServer/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ArticlesDB": "Server=localhost\\sqlexpress;Database=ArticlesDB;Trusted_Connection=True;"
+    "ArtiFindDB": "Server=localhost\\sqlexpress;Database=ArtiFindDB;Trusted_Connection=True;"
   }
   }
 
